# nu_plugin_mongo

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cmds/: count.rs  current_coll_names.rs  delete_many.rs  delete_one.rs  drop.rs  estimated.rs  find.rs  find_one.rs  list.rs  list_collections.rs  list_indexes.rs  mod.rs  mongoc.rs  open.rs  remove.rs  select_handle.rs  val_converter.rs
