[package]
name = "nu_plugin_mongo"
version = "0.1.8"
edition = "2024"
description = "A nushell plugin to interactive with mongodb"
license = "MIT"
documentation = "https://github.com/WindSoilder/nu_plugin_mongo/README.md"
homepage = "https://github.com/WindSoilder/nu_plugin_mongo"
repository = "https://github.com/WindSoilder/nu_plugin_mongo" 

[dependencies]
# nu-plugin = { version = "0.107" }
# nu-protocol = { version = "0.107", features= ["plugin"]}
nu-plugin = { path = "/home/chz/projects/rust_online_code/nushell/crates/nu-plugin" }
nu-protocol = { path = "/home/chz/projects/rust_online_code/nushell/crates/nu-protocol" }
mongodb = {version = "=3.2", features = ["sync"]}
bson = {version= "2", features=["chrono-0_4"]}
chrono = "0.4"
